<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/main_green"
        android:clickable="true"
        android:src="@drawable/baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- ScrollView with single child LinearLayout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Your existing views -->
            <TextView
                android:id="@+id/tvScan"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_scan"
                android:textSize="18dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="32dp"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/cameraBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_green"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Camera"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/selectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_white"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Gallery"
                android:textAllCaps="false"
                android:textColor="@color/main_green"
                android:textSize="15sp" />

            <Button
                android:id="@+id/predictBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_red"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/scan"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/resView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="predict name"
                android:textSize="30dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
