<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginLeft="16dp"
        android:text="@string/title_login"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/desc_login"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/titleLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleLogin"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

    <com.dicoding.dapurnusantara.customview.CVEmail
        android:id="@+id/CVEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription"
        tools:alpha="1" />

    <com.dicoding.dapurnusantara.customview.CVPassword
        android:id="@+id/PasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/montserrat_regular"
        android:drawableEnd="@drawable/pass_invisible"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
        app:layout_constraintTop_toBottomOf="@+id/CVEmail"
        tools:alpha="1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_green"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLogin" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="center"
        android:shadowColor="@color/grey_login"
        android:drawableStart="@drawable/logo_google"
        android:text="@string/login_google"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/btn_google"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvRegistDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="157dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/tvRegist"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:layout_constraintVertical_bias="0.732" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistLogin"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/main_green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegistDescription"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogle"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toEndOf="@+id/tvRegistDescription"
        app:layout_constraintTop_toTopOf="@+id/tvRegistDescription"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>