<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginLeft="16dp"
        android:text="@string/title_register"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/desc_register"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/titleLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleLogin"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

    <com.dicoding.dapurnusantara.customview.CVName
        android:id="@+id/RegistName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvRegist"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvRegist"
        app:layout_constraintTop_toBottomOf="@+id/tvRegist" />

    <com.dicoding.dapurnusantara.customview.CVEmail
        android:id="@+id/RegistEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:minHeight="48dp"
        android:textSize="13sp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/RegistName"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/RegistName"
        app:layout_constraintTop_toBottomOf="@+id/RegistName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegistPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/RegistEmail"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/RegistEmail"
        app:layout_constraintTop_toBottomOf="@+id/RegistEmail">

        <com.dicoding.dapurnusantara.customview.CVPassword
            android:id="@+id/RegistPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textSize="13sp"
            android:fontFamily="@font/montserrat_regular" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegistAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_green"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/btnRegister"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/RegistPasswordLayout"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="@+id/RegistPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/RegistPasswordLayout" />

    <TextView
        android:id="@+id/tvLoginRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="220dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/tvLogin"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnRegistAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistAccount"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/btnLoginRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/btnLoginRegist"
        android:textColor="@color/main_green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoginRegist"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistAccount"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toEndOf="@+id/tvLoginRegist"
        app:layout_constraintTop_toTopOf="@+id/tvLoginRegist"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>